[package]
name = "kei"
version = "0.1.0"
edition = "2024"

[dependencies]
# clap = { version = "4.5", features = ["derive"] }
# anyhow = "1.0"
# thiserror = "1.0"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# python-ast = "0.1.0"
# askama = "0.13.0"
# walkdir = "2.3"
# regex = "1.10"
# log = "0.4"
# env_logger = "0.11"
